--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fbprophet==0.7.1
 pystan==2.19.1.1
 keras==2.8.0
-matplotlib>3.4
+matplotlib==3.3.4
 numpy==1.21.0
 pandas==1.3.4
 pandas_datareader==0.10.0
