--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-pystan==2.19.1.1
-fbprophet==0.7.1
-numpy==1.19.5
 cython>=0.22
 keras==2.8.0
-matplotlib==3.3.4
-numpy==1.19.5
-pandas==1.1.5
 pandas_datareader==0.10.0
 Pillow==8.4.0
-plotly==5.6.0
-streamlit==1.3.1
 yfinance==0.1.68
+streamlit==0.61.0
+pandas==1.1.4
+numpy==1.19.1
+scikit-learn==0.23.2
+matplotlib==3.3.3
+pystan==2.17.0.0
+plotly==4.14.3
+fbprophet==0.7.1
+cryptocmd==0.6.0
