--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ Pillow==8.4.0
 yfinance==0.1.68
 streamlit==0.61.0
 pandas==1.1.4
-numpy==1.19.2
+numpy==1.19.1
 scikit-learn==0.23.2
 matplotlib==3.3.3
 pystan==2.17.0.0
 plotly==4.14.3
 fbprophet==0.7.1
 cryptocmd==0.6.0
-tensorflow-cpu==2.4.0
+#tensorflow-cpu==2.4.0
