--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,9 @@ pystan==2.17.0.0
 plotly==4.14.3
 fbprophet==0.7.1
 cryptocmd==0.6.0
+json
+requests
+tkinter
+PyQt5
+option_menu
 #tensorflow-cpu==2.4.0
