--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [theme]
 
-primaryColor= '#FF4B4B'
-backgroundColor= '#4C6283'
-secondaryBackgroundColor= '#F7B416'
-font="serif"
+primaryColor = '#FF4B4B'
+backgroundColor = '#4C6283'
+secondaryBackgroundColor = '#F7B416'
+font = "serif"
